--- a/src/styles/chat/messagegroup.scss
+++ b/src/styles/chat/messagegroup.scss
@@ -53,12 +53,12 @@
     top: -30px;
 }
 
-.avatarDecoration__8a0c2 {
+.message_ccca67 .avatarDecoration__8a0c2 {
     left: -74px;
     top: -12px;
 }
 
-.hasReply__602e2 .avatarDecoration__8a0c2 {
+.message_ccca67.hasReply__602e2 .avatarDecoration__8a0c2 {
     top: -32px;
 }
 
