--- a/src/styles/chat/search.scss
+++ b/src/styles/chat/search.scss
@@ -107,4 +107,8 @@
         left: -60px;
         top: 0;
     }
+    .avatarDecoration__8a0c2 {
+        left: -64px;
+        top: 0;
+    }
 }
