--- a/src/styles/guilds/index.scss
+++ b/src/styles/guilds/index.scss
@@ -159,7 +159,7 @@
     height: 52px;
     top: 6px;
     left: 6px;
-    border: 3px solid transparent;
+    border: var(--nox-notification-width) solid transparent;
     border-radius: 50%;
     opacity: 0.7;
     z-index: 2;
